--- a/03 - Testimonial Grid Section/index.html
+++ b/03 - Testimonial Grid Section/index.html
@@ -7,7 +7,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <title>Frontend Mentor | [Challenge Name Here]</title>
+  <title>Frontend Mentor | Testimonial Grid Section</title>
 
   <link rel="stylesheet" href="CSS/style.css">
 
