--- a/07 - Interactive Rating Component/index.html
+++ b/07 - Interactive Rating Component/index.html
@@ -12,7 +12,7 @@
 <body>
   <main>
     <section class="rating-component">
-      <div class="container">
+      <div class="container start-stage">
         <figure class="logo-container">
           <img src="Images/icon-star.svg" alt="Star logo">
         </figure>
@@ -34,6 +34,12 @@
           Submit
         </button>
       </div>
+
+      <div class="container end-state">
+        
+      </div>
+
+
     </section>
   </main>
  <script src="script.js"></script>
