--- a/07 - Interactive Rating Component/index.html
+++ b/07 - Interactive Rating Component/index.html
@@ -5,19 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/general.css">
+
   <title>Frontend Mentor | Interactive rating component</title>
 </head>
-
 <body>
   <main>
     <section class="rating-component">
-      <div class="container start-stage">
+      <div class="container start-state">
         <figure class="logo-container">
           <img src="Images/icon-star.svg" alt="Star logo">
         </figure>
         <div class="text-content">
-          <h3 class="tertiary-heading">How did we do?</h3>
+          <h1 class="primary-heading">How did we do?</h1>
           <p class="text">
             Please let us know how we did with your support request. All feedback is appreciated
             to help us improve our offering!
@@ -36,13 +37,26 @@
       </div>
 
       <div class="container end-state">
-        
+        <figure class="image-container">
+          <img src="Images/illustration-thank-you.svg" alt="Thank you Illustration">
+        </figure>
+         <div class="user-choice">
+          <p>You have selected <span class="input">4</span> out of 5</p>
+         </div>
+         <div class="text-content">
+          <h2 class="secondary-heading">Thank you!</h1>
+          <p class="text">
+            We appreciate you taking the time to give a rating. If you ever need more support, 
+            don’t hesitate to get in touch!
+          </p>
+         </div>
+
       </div>
 
 
     </section>
   </main>
- <script src="script.js"></script>
+ <script src="Javascript/script.js"></script>
 </body>
 
 </html>
