--- a/07 - Interactive Rating Component/index.html
+++ b/07 - Interactive Rating Component/index.html
@@ -24,14 +24,14 @@
             to help us improve our offering!
           </p>
         </div>
-        <div class="ratings">
-          <div class="rating">1</div>
-          <div class="rating">2</div>
-          <div class="rating">3</div>
-          <div class="rating">4</div>
-          <div class="rating">5</div>
+        <div class="ratings-container">
+          <button class="rating">1</button>
+          <button class="rating">2</button>
+          <button class="rating">3</button>
+          <button class="rating">4</button>
+          <button class="rating">5</button>
         </div>
-        <button class="submit-button">
+        <button class="btn submit-button">
           Submit
         </button>
       </div>
@@ -50,6 +50,9 @@
             don’t hesitate to get in touch!
           </p>
          </div>
+         <button class="btn rate-again">
+          Rate Again
+         </button>
 
       </div>
 
@@ -60,28 +63,3 @@
 </body>
 
 </html>
-
-
-<!-- Rating state start -->
-
-<!-- How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit -->
-
-<!-- Rating state end -->
-
-<!-- Thank you state start -->
-
-<!-- You selected Add rating here out of 5 -->
-
-<!-- Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  Thank you state end -->
