--- a/07 - Interactive Rating Component/index.html
+++ b/07 - Interactive Rating Component/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="CSS/style.css">
   <link rel="stylesheet" href="CSS/general.css">
+  <link rel="stylesheet" href="CSS/queries.css">
 
   <title>Frontend Mentor | Interactive rating component</title>
 </head>
@@ -31,6 +32,7 @@
           <button class="rating">4</button>
           <button class="rating">5</button>
         </div>
+        <p class="no-rating">Kindly select a rating !</p>
         <button class="btn submit-button">
           Submit
         </button>
