--- a/01 - QR Code Component/index.html
+++ b/01 - QR Code Component/index.html
@@ -8,11 +8,16 @@
     <title>QR Code Component (Frontend Mentor)</title>
     <link rel="icon" type=" image/png" sizes="32x32" href="Images/favicon-32x32.png">
     <link rel="stylesheet" href="CSS/style.css">
-    <style>
-
-    </style>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
+
 <body>
+    <div class="icons">
+        <ion-icon class="light-mode-icon" name="sunny-outline"></ion-icon>
+        <ion-icon class="dark-mode-icon" name="moon-outline"></ion-icon>
+    </div>
+
     <div class="container">
         <img src="Images/image-qr-code.png" alt="" class="image">
         <div class="text">
@@ -20,6 +25,7 @@
             <p class="para">Scan the QR Code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
     </div>
+<script src="Javascript/script.js"></script>
 </body>
 
 </html>
