--- a/03 - Testimonial Grid Section/index.html
+++ b/03 - Testimonial Grid Section/index.html
@@ -4,16 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/queries.css">
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
   <title>Frontend Mentor | Testimonial Grid Section</title>
 
-  <link rel="stylesheet" href="CSS/style.css">
 
 </head>
 
 <body class="dark-mode">
+ <header>
+  <div class="icons">
+    <ion-icon class="light-mode-icon" name="sunny-outline"></ion-icon>
+    <ion-icon class="dark-mode-icon" name="moon-outline"></ion-icon>
+</div>
+ </header>
+
   <main>
     <section class="testimonial-grid">
 
@@ -127,6 +136,8 @@
 
     </section>
   </main>
+
+  <script src="Javascript/script.js"></script>
 </body>
 
 </html>
