--- a/03 - Testimonial Grid Section/index.html
+++ b/03 - Testimonial Grid Section/index.html
@@ -16,9 +16,12 @@
 </head>
 
 <body class="dark-mode">
- <header>
- 
- </header>
+  <header>
+    <div class="icons">
+      <ion-icon class="light-mode-icon" name="sunny-outline"></ion-icon>
+      <ion-icon class="dark-mode-icon" name="moon-outline"></ion-icon>
+    </div>
+  </header>
 
   <main>
     <section class="testimonial-grid">
