--- a/11 - Sunnyside Agency Landing Page/index.html
+++ b/11 - Sunnyside Agency Landing Page/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device -->
     <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/general.css">
+    <link rel="stylesheet" href="CSS/media-queries.css">
     <title>Frontend Mentor | Sunnyside Agency landing page</title>
 
 </head>
@@ -24,15 +24,26 @@
                 <li><a href="#" class="contact-link">Contact</a></li>
             </ul>
         </nav>
+        <div class="mobile-navigation">
+            <button class="open-btn">
+                <ion-icon name="menu-outline"></ion-icon>
+            </button>
+            <button class="close-btn">
+                <ion-icon name="close-outline"></ion-icon>
+            </button>
+        </div>
+
     </div>
     <h1 class="primary-heading">We are creatives</h1>
     <div class="down-arrow-container">
-        <img src="Images/icon-arrow-down.svg" alt="down-arrow-icon">
+        <a href="#intro-section"><img src="Images/icon-arrow-down.svg" alt="down-arrow-icon"></a>
     </div>
 </header>
 
+<div class="overlay hidden"></div>
+
 <main>
-    <section class="intro-section">
+    <section class="intro-section" id="intro-section">
         <div class="container grid grid-2-columns">
             <div class="text-content">
                 <h2 class="secondary-heading">Transform your brand</h2>
@@ -149,16 +160,23 @@
             </ul>
         </nav>
         <div class="social-media-logos">
-            <a href="#"><ion-icon class="social-media-logo" name="logo-facebook"></ion-icon></a>
-            <a href="#"><ion-icon class="social-media-logo" name="logo-instagram"></ion-icon></a>
-            <a href="#"><ion-icon class="social-media-logo" name="logo-twitter"></ion-icon></a>
-            <a href="#"><ion-icon class="social-media-logo" name="logo-pinterest"></ion-icon></a>
+            <a href="#">
+                <ion-icon class="social-media-logo" name="logo-facebook"></ion-icon>
+            </a>
+            <a href="#">
+                <ion-icon class="social-media-logo" name="logo-instagram"></ion-icon>
+            </a>
+            <a href="#">
+                <ion-icon class="social-media-logo" name="logo-twitter"></ion-icon>
+            </a>
+            <a href="#">
+                <ion-icon class="social-media-logo" name="logo-pinterest"></ion-icon>
+            </a>
         </div>
     </div>
 </footer>
 
+<script src="Javascript/script.js"></script>
+</body>
+</html>
 
-<!--  About-->
-<!--  Services-->
-<!--  Projects-->
-<!--  Contact-->
