--- a/12 - Rock Paper Scissors/index.html
+++ b/12 - Rock Paper Scissors/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/bonus-game.css">
+    <link rel="stylesheet" href="CSS/media-queries.css">
     <title>Frontend Mentor | Rock, Paper, Scissors</title>
 </head>
 <body>
@@ -75,7 +75,7 @@
     <div class="rules-content">
         <div class="rules-header">
             <h1 class="rules-heading">Rules</h1>
-            <img src="Images/icon-close.svg" alt="close icon" class="close-icon">
+            <button class="close-icon"><img src="Images/icon-close.svg" alt="close icon"></button>
         </div>
         <figure class="rules-image-box">
             <img src="Images/image-rules.svg" alt="Rules image" class="rules-image">
