--- a/12 - Rock Paper Scissors/index.html
+++ b/12 - Rock Paper Scissors/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 </header>
-
+<main>
 <section class="difficulty-section">
     <div class="difficulty-container">
         <h1 class="difficulty-text">Difficulty</h1>
@@ -106,6 +106,8 @@
 </section>
 
 <div class="overlay overlay-hidden"></div>
+
+</main>
 
 <script src="Javascript/script.js"></script>
 </body>
