--- a/13 - Space Tourism Website/index.html
+++ b/13 - Space Tourism Website/index.html
@@ -6,6 +6,7 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon-32x32.png">
     <link rel="stylesheet" href="CSS/index.css">
+    <link rel="stylesheet" href="CSS/utility-classes.css">
     <title>Frontend Mentor | Space tourism website</title>
 </head>
 <body>
@@ -22,6 +23,7 @@
         </ul>
     </nav>
 </header>
+
 
 
 </body>
