--- a/13 - Space Tourism Website/index.html
+++ b/13 - Space Tourism Website/index.html
@@ -9,31 +9,53 @@
     <link rel="stylesheet" href="CSS/utility-classes.css">
     <title>Frontend Mentor | Space tourism website</title>
 </head>
-<body>
-<header class="header">
-    <div class="logo-container">
-        <img src="Images/Icons/logo.svg" alt="logo">
+<body class="home">
+<!--<header class="primary-header">-->
+<!--    <div class="logo-container">-->
+<!--        <img src="Images/Icons/logo.svg" alt="Space Tourism logo" class="logo">-->
+<!--    </div>-->
+<!--    <nav class="main-nav">-->
+<!--        <ul class="main-nav-list underline-indicators">-->
+<!--            <li><a href="index.html" class="main-nav-link active letter-spacing-2"><span class="number">00</span>-->
+<!--                Home</a></li>-->
+<!--            <li><a href="destination.html" class="main-nav-link letter-spacing-2"><span class="number">01</span>Destination</a>-->
+<!--            </li>-->
+<!--            <li><a href="crew.html" class="main-nav-link letter-spacing-2"><span class="number">02</span>Crew</a></li>-->
+<!--            <li><a href="technology.html" class="main-nav-link letter-spacing-2"><span class="number">03</span>Technology</a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </nav>-->
+<!--    <div class="vertical-line"></div>-->
+<!--</header>-->
+
+<section class="hero-section">
+    <div class="grid-container">
+        <div>
+            <h1 class="primary-heading text-light font-size-500 font-family-barlow-condensed uppercase letter-spacing-1">
+                So, you want to travel to
+                <span class="font-family-barlow text-white font-size-900">Space</span></h1>
+            <p class="hero-section-text">
+                Let’s face it; if you want to go to space, you might as well genuinely go to
+                outer space and not hover kind of on the edge of it. Well sit back, and relax
+                because we’ll give you a truly out of this world experience!
+            </p>
+        </div>
+        <div>
+            <a class="large-button background-white text-dark uppercase font-family-barlow font-size-600">Explore</a>
+        </div>
     </div>
-    <nav class="main-nav">
-        <ul class="main-nav-list">
-            <li><a href="#" class="main-nav-link"><span>00</span> Home</a></li>
-            <li><a href="#" class="main-nav-link"><span>01</span>Destination</a></li>
-            <li><a href="#" class="main-nav-link"><span>02</span>Crew</a></li>
-            <li><a href="#" class="main-nav-link"><span>03</span>Technology</a></li>
-        </ul>
-    </nav>
-</header>
 
 
+</section>
 
+
+<script src="Javascript/script.js"></script>
 </body>
 </html>
 
 
 <!--  So, you want to travel to-->
 <!--  Space-->
-<!--  Let’s face it; if you want to go to space, you might as well genuinely go to -->
-<!--  outer space and not hover kind of on the edge of it. Well sit back, and relax -->
-<!--  because we’ll give you a truly out of this world experience!-->
+
 
 <!--  Explore-->
